# game-prototype

./: .pre-commit-config.yaml  DOCKER.save  Dockerfile.client  Dockerfile.server  LICENSE  README.md  client.sh  pyproject.toml  server.sh
.github/workflows/: deploy.yml
client/: __init__.py  __main__.py  client.py  typing_engine.py
client/views/: __init__.py  game.py  main_menu.py  options.py  pause.py  server_list.py  splash.py
common/: connection.py  enemy.py  game.py  game_object.py  id_generator.py  sprite_cache.py  sprites.py  typing_engine.py  utils.py  vehicle.py
server/: __init__.py  __main__.py  connection.py  game_lobby.py  game_state.py  network_manager.py  physics.py  player.py  server.py
